# TCC

./: .gitignore  .gitmodules  README.md  references.txt  tcc_schedule.html  todos.md
implementation/: CMakeLists.txt
implementation/domineering/include/: definitions.hpp  dom_evaluator.hpp  domineering.hpp
implementation/domineering/src/: dom_evaluator.cpp  domineering.cpp  main.cpp
implementation/lib/: Makefile  evaluator.cpp  evaluator.hpp  union_find.cpp  union_find.hpp
implementations/domineering/include/: definitions.h  dom_evaluator.h
implementations/domineering/src/: dom_evaluator.cpp  domineering.cpp  main.cpp
implementations/lib/: evaluator.cpp  union_find.cpp  union_find.h
monography/: bibliography.bib  ex_simp_cs_pres.tex  main.aux  main.bcf  main.lof  main.lot  main.out  main.tex  main.toc  possiblegames.tex
monography/_minted-main/: 760D7266080190AF5BC2A10BDA50313F02018AB381AD265562A95348870C690B.pygtex  8D489EBB50EBB638A71B8784C31F1A6002018AB381AD265562A95348870C690B.pygtex  D5F7157C28BC3EE4AB29FA53AA48D70802018AB381AD265562A95348870C690B.pygtex  E311B4763E2830B40CAE78BDC116CE0C02018AB381AD265562A95348870C690B.pygtex
monography/sections/: abstract.tex  appendix_A.tex  conclusion.tex  data.tex  definitions.tex  definitions_game_tree.tex  empirical_analysis.tex  figure_2_3.tex  game_tree_temp.tex  infinite_hackenbush.tex  infinite_hackenbush_two.tex  introduction.tex  numbers.tex  temperature.tex  theory.tex  title.tex
presentation/: main.tex  notas.txt  tempos.txt  topicos.txt
www/: index.html
www/games/: games_index.html  index.html
(+25 files in other folders)
